Сделал скелет барбершопа

--- a/index.html
+++ b/index.html
@@ -5,8 +5,134 @@
     <title>HTML Academy: Барбершоп</title>
   </head>
   <body>
+        <header class="main-header">
+          <div class="container">
+            <nav class="main-navigation">
+              <ul>
+                <li>
+                  <a href="#">Информация</a>
+                </li>
+                <li>
+                  <a href="#">Новости</a>
+                </li>
+                <li>
+                  <a href="#">Прайс-лист</a>
+                </li>
+                <li>
+                  <a href="#">Магазин</a>
+                </li>
+                <li>
+                  <a href="#">Контакты</a>
+                </li>
+              </ul>
+            </nav>
+            <div class="user-block">
+              <a class="login">Вход</a>
+          </div>
+          </div>
 
-    <p>Репозиторий создан для обучения на интенсивном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive">Базовый HTML и CSS</a>».</p>
+        </header>
+
+<--!-->Верхняя часть каталога<--!-->
+    <div class="index-content">
+      <div class="index-content-top">
+        <h2 class="index-content-title">Средства для ухода<h2>
+          <a href="#">Главная</a>
+          <a href="#">Магазин</a>
+          <a href="#">Средства для ухода</a>
+      </div>
+    </div >
+<--!-->Верхняя часть каталога<--!-->
+
+<--!-->Меню выбора производителей<--!-->
+    <div class="index-content">
+      <div class="index-content-middle">
+        <a class="index-content-title">Производители</a>
+          <input type="checkbox" name="Baxter of california" checked>
+          <input type="checkbox" name="MR Natty">
+          <input type="checkbox" name="Suavecito">
+          <input type="checkbox" name="Malin goetz">
+          <input type="checkbox" name="Murrays">
+          <input type="checkbox" name="American crew" checked>
+      </div >
+    </div >
+<--!-->Меню выбора производителей<--!-->
+
+<--!-->Меню группы товаров<--!-->
+    <div class="index-content">
+      <div class="index-content-bottom">
+        <a class="index-content-title">Группы товаров</a>
+        <input type="checkbox" name="Бритвенные принадлежности">
+        <input type="checkbox" name="Средства для ухода">
+        <input type="checkbox" name="Аксессуары">
+      </div>
+    </div>
+<input type="button" name="show" value="Показать">
+<--!-->Меню группы товаров<--!-->
+
+
+
+<--!-->Картинки с товарами<--!-->
+  <div class="staff">
+    <div class="staff-1">
+      <img src="img/index-logo.png" alt="вещь1">
+    </div>
+    <div class="staff-2">
+      <img src="img/index-logo.png" alt="вещь2">
+    </div>
+    <div class="staff-3">
+      <img src="img/index-logo.png" alt="вещь3">
+    </div>
+    <div class="staff-4">
+      <img src="img/index-logo.png" alt="вещь4">
+    </div>
+    <div class="staff-5">
+      <img src="img/index-logo.png" alt="вещь5">
+    </div>
+    <div class="staff-6">
+      <img src="img/index-logo.png" alt="вещь6">
+    </div>
+  </div>
+<--!-->Картинки с товарами<--!-->
+
+<--!-->Навигация по страницам<--!-->
+    <div class="pages">
+      <label>
+        <input type="pages" name="page-1" value="1">
+      </label>
+      <label>
+        <input type="pages" name="page-2" value="2" checked>
+      </label>
+      <label>
+        <input type="pages" name="page-3" value="3">
+      </label>
+      <label>
+        <input type="pages" name="page-4" value="4">
+      </label>
+    </div>
+<--!-->Навигация по страницам<--!-->
+
+
+    <footer class="main-footer">
+      <div class="container">
+        <section class="footer-contacts">
+          Барбершоп «Бородинский»<br>
+          Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8<br>
+           <a href="#">Как нас найти?</a><br>
+          Телефон: +7 (812) 666-02-66
+         </section>
+         <section class="footer-social">
+          <p>Давайте дружить!</p>
+            <a class="social-btn social-btn-vk" href="#">Вконтакте</a>
+            <a class="social-btn social-btn-fb" href="#">Фейсбук</a>
+           <a class="social-btn social-btn-inst" href="#">Инстаграм</a>
+       </section>
+       <section class="footer-copyright">
+         <p>Разработано:</p>
+           <a class="btn" href="https://htmlacademy.ru">HTML Academy</a>
+       </section>
+    </div>
+</footer>
 
   </body>
 </html>
