--- a/index.html
+++ b/index.html
@@ -76,21 +76,27 @@
   <div class="staff">
     <div class="staff-1">
       <img src="img/index-logo.png" alt="вещь1">
+      <input type="button" name="buy" value="buy">
     </div>
     <div class="staff-2">
       <img src="img/index-logo.png" alt="вещь2">
+      <input type="button" name="buy" value="buy">
     </div>
     <div class="staff-3">
       <img src="img/index-logo.png" alt="вещь3">
+      <input type="button" name="buy" value="buy">
     </div>
     <div class="staff-4">
       <img src="img/index-logo.png" alt="вещь4">
+      <input type="button" name="buy" value="buy">
     </div>
     <div class="staff-5">
       <img src="img/index-logo.png" alt="вещь5">
+      <input type="button" name="buy" value="buy">
     </div>
     <div class="staff-6">
       <img src="img/index-logo.png" alt="вещь6">
+      <input type="button" name="buy" value="buy">
     </div>
   </div>
 <--!-->Картинки с товарами<--!-->
@@ -98,16 +104,16 @@
 <--!-->Навигация по страницам<--!-->
     <div class="pages">
       <label>
-        <input type="pages" name="page-1" value="1">
+        <input type="button" name="page-1" value="1">
       </label>
       <label>
-        <input type="pages" name="page-2" value="2" checked>
+        <input type="button" name="page-2" value="2" checked>
       </label>
       <label>
-        <input type="pages" name="page-3" value="3">
+        <input type="button" name="page-3" value="3">
       </label>
       <label>
-        <input type="pages" name="page-4" value="4">
+        <input type="button" name="page-4" value="4">
       </label>
     </div>
 <--!-->Навигация по страницам<--!-->
