Выполнил второе задание и поправил комментарии

--- a/Каталог_Barbershop-shop.html
+++ b/Каталог_Barbershop-shop.html
@@ -33,7 +33,7 @@
 
         </header>
 
-<--!-->Верхняя часть каталога<--!-->
+<!--Верхняя часть каталога-->
     <div class="index-content">
       <div class="index-content-top">
         <h2 class="index-content-title">Средства для ухода<h2>
@@ -42,9 +42,9 @@
           <a href="#">Средства для ухода</a>
       </div>
     </div >
-<--!-->Верхняя часть каталога<--!-->
+<!--Верхняя часть каталога-->
 
-<--!-->Меню выбора производителей<--!-->
+<!--Меню выбора производителей-->
     <div class="index-content">
       <div class="index-content-middle">
         <a class="index-content-title">Производители</a>
@@ -56,9 +56,9 @@
           <input type="checkbox" name="American crew" checked>
       </div >
     </div >
-<--!-->Меню выбора производителей<--!-->
+<!--Меню выбора производителей-->
 
-<--!-->Меню группы товаров<--!-->
+<!--Меню группы товаров-->
     <div class="index-content">
       <div class="index-content-bottom">
         <a class="index-content-title">Группы товаров</a>
@@ -68,11 +68,11 @@
       </div>
     </div>
 <input type="button" name="show" value="Показать">
-<--!-->Меню группы товаров<--!-->
+<!--Меню группы товаров-->
 
 
 
-<--!-->Картинки с товарами<--!-->
+<!--Картинки с товарами-->
   <div class="staff">
     <div class="staff-1">
       <img src="img/index-logo.png" alt="вещь1">
@@ -99,9 +99,9 @@
       <input type="button" name="buy" value="buy">
     </div>
   </div>
-<--!-->Картинки с товарами<--!-->
+<!--Картинки с товарами!-->
 
-<--!-->Навигация по страницам<--!-->
+<!--Навигация по страницам-->
     <div class="pages">
       <label>
         <input type="button" name="page-1" value="1">
@@ -116,7 +116,7 @@
         <input type="button" name="page-4" value="4">
       </label>
     </div>
-<--!-->Навигация по страницам<--!-->
+<!--Навигация по страницам-->
 
 
     <footer class="main-footer">
