--- a/Catalog.html
+++ b/Catalog.html
@@ -29,7 +29,7 @@
             <div class="user-block">
               <a class="login">Вход</a>
           </div>
-          </div>
+
         </header>
 
 <!--Верхняя часть каталога-->
@@ -40,7 +40,7 @@
         <li><a href="#">Магазин</a></li>
         <li>Средства для ухода</li>
       </ul>
-  </div >
+
 <!--Верхняя часть каталога-->
 
 <!--Левая сторона с фильтрами-->
@@ -165,6 +165,9 @@
   <li><a href="#">4</a></li>
 </ul>
 <!--Навигация по страницам-->
+
+  </div>
+  </div> <!--Закрывает контейнер-->
 
     <footer class="main-footer">
       <div class="container">
