Исправил замечания в барбершопе

--- a/item-details.html
+++ b/item-details.html
@@ -29,7 +29,6 @@
         <div class="user-block">
           <a class="login">Вход</a>
         </div>
-      </div>
     </header>
 
   <div class="container">
@@ -40,8 +39,8 @@
         <li><a href="#">Средства для ухода</a></li>
         <li><a>Набор для путешествий Baxter of california</a></li>
       </ul>
-  </div >
 
+<div class="container">
   <div class="big-image">
     <img src="http://placehold.it/150x100">
   </div>
@@ -57,20 +56,21 @@
     <a/>
   </div>
 
-      <div class="item-description">
-        <p>Есть в наличии</p>
-        <span class="gray">Артикул:Dexter-AE</span>
-        <p>Travel Kit - необходимый аксессуар во время любого
-          путешествия. В аккуратной кожаной сумке находится  все, что
-          нужно для бритья и ухода за кожей во время рабочей поездки
-          или отдыха: средство для умывания, увлажняющий крем, крем
-          для бритья, крем после бритья, шампунь. Набор также может
-          стать отличным подарком</p>
-        <div class="price">
-          <div>2900 РУБ.</div>
-            <a href="#">Купить</a>
-        </div>
+  <div class="container">
+    <div class="item-description">
+      <p>Есть в наличии</p>
+      <span class="gray">Артикул:Dexter-AE</span>
+      <p>Travel Kit - необходимый аксессуар во время любого
+        путешествия. В аккуратной кожаной сумке находится  все, что
+        нужно для бритья и ухода за кожей во время рабочей поездки
+        или отдыха: средство для умывания, увлажняющий крем, крем
+        для бритья, крем после бритья, шампунь. Набор также может
+        стать отличным подарком</p>
+      <div class="price">
+        <div>2900 РУБ.</div>
+          <a href="#">Купить</a>
       </div>
+    </div>
 
 
   <h3>В набор входят:</h3>
@@ -82,7 +82,10 @@
       <li>Удобная кожаная косметичка</li>
     </ul>
 
-
+</div>
+  </div>
+    </div >
+      </div>
     <footer class="main-footer">
       <div class="container">
         <section class="footer-contacts">
