--- a/item-details.html
+++ b/item-details.html
@@ -42,17 +42,17 @@
 
 <div class="container">
   <div class="big-image">
-    <img src="http://placehold.it/150x100">
+    <img src="http://placehold.it/150x100" alt="Набор для путешествий">
   </div>
   <div class="preview-image">
     <a href="#">
-    <img src="http://placehold.it/150x100">
+    <img src="http://placehold.it/150x100" alt="Набор для путешествий">
     <a/>
     <a href="#">
-    <img src="http://placehold.it/150x100">
+    <img src="http://placehold.it/150x100" alt="Косметичка">
     <a/>
     <a href="#">
-    <img src="http://placehold.it/150x100">
+    <img src="http://placehold.it/150x100" alt="Набор и косметичка">
     <a/>
   </div>
 
