Графика и текстовые стили барбершопа

--- a/Catalog.html
+++ b/Catalog.html
@@ -28,7 +28,7 @@
               </ul>
             </nav>
             <div class="user-block">
-              <a class="login">Вход</a>
+              <a class="login"><img src="img/icon-login.png" width="18" height="16" alt="login">Вход</a>
             </div>
 
         </header>
@@ -81,7 +81,7 @@
 <!--Картинки с товарами-->
   <article class="card">
     <a href="#" class="card-image">
-      <img src="img/index-logo.png" alt="card1">
+      <img src="img/card1.jpg" width="220" height="165" alt="card1">
     </a>
     <div class="card-content">
       <a href="#" class="card-title">Набор для путешествий Baxter of california</a>
@@ -94,7 +94,7 @@
 
   <article class="card">
     <a href="#" class="card-image">
-      <img src="img/index-logo.png" alt="card2">
+      <img src="img/card2.jpg" width="220" height="165" alt="card2">
     </a>
     <div class="card-content">
       <a href="#" class="card-title">Увлажняющий кондиционер Baxter of california</a>
@@ -107,7 +107,7 @@
 
   <article class="card">
     <a href="#" class="card-image">
-      <img src="img/index-logo.png" alt="card3">
+      <img src="img/card3.jpg" width="220" height="165" alt="card3">
     </a>
     <div class="card-content">
       <a href="#" class="card-title">Гель для волос SUAVECITO</a>
@@ -120,7 +120,7 @@
 
   <article class="card">
     <a href="#" class="card-image">
-      <img src="img/index-logo.png" alt="card4">
+      <img src="img/card4.jpg" width="220" height="165" alt="card4">
     </a>
     <div class="card-content">
       <a href="#" class="card-title">Глина для укладки волос American CREW</a>
@@ -133,7 +133,7 @@
 
   <article class="card">
     <a href="#" class="card-image">
-      <img src="img/index-logo.png" alt="card5">
+      <img src="img/card5.jpg" width="220" height="165" alt="card5">
     </a>
     <div class="card-content">
       <a href="#" class="card-title">Гель для волос American CREW</a>
@@ -146,7 +146,7 @@
 
   <article class="card">
     <a href="#" class="card-image">
-      <img src="img/index-logo.png" alt="card6">
+      <img src="img/card6.jpg" width="220" height="165" alt="card6">
     </a>
     <div class="card-content">
       <a href="#" class="card-title">Набор для бритья Baxter of california</a>
@@ -188,8 +188,8 @@
          <p>Разработано:</p>
            <a class="btn" href="https://htmlacademy.ru">HTML Academy</a>
        </section>
-    </div>
-</footer>
+      </div>
+    </footer>
 
   </body>
 </html>
