--- a/item-details.html
+++ b/item-details.html
@@ -28,7 +28,7 @@
           </ul>
         </nav>
         <div class="user-block">
-          <a class="login">Вход</a>
+          <a class="login"><img src="img/icon-login.png" width="18" height="16" alt="login">Вход</a>
         </div>
     </header>
 
@@ -43,17 +43,17 @@
 
 <div class="container">
   <div class="big-image">
-    <img src="http://placehold.it/380x400" alt="Набор для путешествий">
+    <img src="img/item-big.jpg" width="460" height="498" alt="Набор для путешествий">
   </div>
   <div class="preview-image">
     <a href="#">
-    <img src="http://placehold.it/120x125" alt="Набор для путешествий">
+    <img src="img/item-small.jpg" width="140" height="149" alt="Набор для путешествий">
     </a>
     <a href="#">
-    <img src="http://placehold.it/120x125" alt="Косметичка">
+    <img src="img/item-small-2.jpg" width="140" height="149" alt="Косметичка">
     <a/>
     <a href="#">
-    <img src="http://placehold.it/120x125" alt="Набор и косметичка">
+    <img src="img/item-small-3.jpg" width="140" height="149" alt="Набор и косметичка">
     <a/>
   </div>
 
